2012-11-14  Andy Buckley  <andy.buckley@cern.ch>

	* Merging updates from the AIDA maintenance branch up to r3974
	(latest revision for next merges is r4009).

2012-11-11  Andy Buckley  <andy.buckley@cern.ch>

	* include/Math/: Various numerical fixes to Vector3::angle and
	changing the 4 vector mass treatment to permit spacelike
	virtualities (in some cases even the fuzzy isZero assert check was
	being violated).

2012-10-15  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2012_I1107658 analysis

2012-10-11  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CDF_2012_NOTE10874 analysis

2012-10-04  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ATLAS_2012_I1183818 analysis

2012-07-17  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Cleanup and multiple fixes in CMS_2011_S9120041

	* Bugfixed in ALEPH_2004_S5765862 and ATLAS_2010_CONF_2010_049
	(thanks to Anil Pratap)

2012-08-09  Andy Buckley  <andy.buckley@cern.ch>

	* Fixing aida2root command-line help message and converting to TH*
	rather than TGraph by default.

2012-07-24  Andy Buckley  <andy.buckley@cern.ch>

	* Improvements to rivet-mkhtml and rivet-buildplugin.

2012-07-17  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Add CMS_2012_I1087342

2012-07-05  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Version 1.8.1!

2012-07-05  Holger Schulz  <holger.schulz@physik.hu-berlin.de>

	* Add ATLAS_2011_I945498

2012-07-03  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Bugfix for transverse mass (thanks to Gavin Hesketh)

2012-06-29  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Merge YODA branch into trunk. YODA is alive!!!!!!

2012-06-26  Holger Schulz  <holger.schulz@physik.hu-berlin.de>

	* Add ATLAS_2012_I1091481

2012-06-20  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added D0_2011_I895662: 3-jet mass

2012-04-24  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* fixed a few bugs in rivet-rmgaps

	* Added new TOTEM dN/deta analysis

2012-03-19  Andy Buckley  <andy.buckley@cern.ch>

	* Version 1.8.0!
