@@ -1,0 +1,19 @@
+# BEGIN PLOT /CMS_2012_I1102908/d01-x01-y01
+Title=Inclusive to exclusive dijet production ratio
+XLabel=$\Delta y$
+YLabel=$\frac{\mathrm{d} \sigma^\text{inc}} {\mathrm{d} y}  /  \frac{\mathrm{d} \sigma^\text{exc}}{\mathrm{d} y}$
+LegendXPos=0.7
+LegendYPos=0.2
+FullRange=1
+LogY=0
+# END PLOT
+
+# BEGIN PLOT /CMS_2012_I1102908/d02-x01-y01
+Title=Mueller-Navelet to exclusive dijet production ratio
+XLabel=$\Delta y$
+YLabel=$\frac{\mathrm{d} \sigma^\text{MN}}{\mathrm{d} y} / \frac{\mathrm{d} \sigma^\text{exc}}{\mathrm{d} y}$
+LegendXPos=0.7
+LegendYPos=0.2
+FullRange=1
+LogY=0
+# END PLOT
