@@ -1,0 +1,131 @@
+<?xml version="1.0" encoding="ISO-8859-1" ?>
+<!DOCTYPE aida SYSTEM "http://aida.freehep.org/schemas/3.3/aida.dtd">
+<aida version="3.3">
+  <implementation version="1.1" package="FreeHEP"/>
+  <dataPointSet name="d01-x01-y01" dimension="2"
+      path="/REF/CMS_2012_I1102908" title="inclusive-to-exclusive-dijets-ratio">
+    <annotation>
+      <item key="Title" value="" sticky="true"/>
+      <item key="AidaPath" value="/REF/d01-x01-y01" sticky="true"/>
+    </annotation>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="5.000000e-01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="2.085304e-03" value="1.285790e+00" errorMinus="2.085304e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="1.250000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="2.815086e-03" value="1.259766e+00" errorMinus="2.815086e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="1.750000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="2.971532e-03" value="1.257731e+00" errorMinus="2.971532e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="2.250000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="3.340244e-03" value="1.264337e+00" errorMinus="3.340244e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="2.750000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="4.064577e-03" value="1.281168e+00" errorMinus="4.064577e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="3.250000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="5.180541e-03" value="1.311960e+00" errorMinus="5.180541e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="3.750000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="7.053265e-03" value="1.348930e+00" errorMinus="7.053265e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="4.250000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="9.310764e-03" value="1.370016e+00" errorMinus="9.310764e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="4.750000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="1.278989e-02" value="1.395372e+00" errorMinus="1.278989e-02"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="5.250000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="1.750055e-02" value="1.397625e+00" errorMinus="1.750055e-02"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="5.750000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="2.641841e-02" value="1.444445e+00" errorMinus="2.641841e-02"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="6.500000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="2.827189e-02" value="1.427092e+00" errorMinus="2.827189e-02"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="7.500000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.348717e-02" value="1.466756e+00" errorMinus="4.348717e-02"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="6.000000e-01" value="8.600000e+00" errorMinus="6.000000e-01"/>
+      <measurement errorPlus="3.010924e-02" value="1.387657e+00" errorMinus="3.010924e-02"/>
+    </dataPoint>
+  </dataPointSet>
+  <dataPointSet name="d02-x01-y01" dimension="2"
+      path="/REF/CMS_2012_I1102908" title="MN-to-exclusive-dijets-ratio">
+    <annotation>
+      <item key="Title" value="" sticky="true"/>
+      <item key="AidaPath" value="/REF/d02-x01-y01" sticky="true"/>
+    </annotation>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="5.000000e-01" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="5.383991e-04" value="1.022948e+00" errorMinus="5.383991e-04"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="1.250000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="1.173515e-03" value="1.051822e+00" errorMinus="1.173515e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="1.750000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="1.486924e-03" value="1.073364e+00" errorMinus="1.486924e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="2.250000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="1.943143e-03" value="1.100906e+00" errorMinus="1.943143e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="2.750000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="2.592440e-03" value="1.127861e+00" errorMinus="2.592440e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="3.250000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="3.648154e-03" value="1.171354e+00" errorMinus="3.648154e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="3.750000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="5.412816e-03" value="1.222222e+00" errorMinus="5.412816e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="4.250000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="7.604860e-03" value="1.262895e+00" errorMinus="7.604860e-03"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="4.750000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="1.114202e-02" value="1.313324e+00" errorMinus="1.114202e-02"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="5.250000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="1.586938e-02" value="1.334646e+00" errorMinus="1.586938e-02"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.500000e-01" value="5.750000e+00" errorMinus="2.500000e-01"/>
+      <measurement errorPlus="2.447298e-02" value="1.385624e+00" errorMinus="2.447298e-02"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="6.500000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="2.735960e-02" value="1.393627e+00" errorMinus="2.735960e-02"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.000000e-01" value="7.500000e+00" errorMinus="5.000000e-01"/>
+      <measurement errorPlus="4.332298e-02" value="1.454774e+00" errorMinus="4.332298e-02"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="6.000000e-01" value="8.600000e+00" errorMinus="6.000000e-01"/>
+      <measurement errorPlus="2.995671e-02" value="1.385074e+00" errorMinus="2.995671e-02"/>
+    </dataPoint>
+  </dataPointSet>
+</aida>
