@@ -1,3 +1,7 @@
+2012-11-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>
+
+	* Added CMS_2012_I1102908 analysis
+
 2012-11-14  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Merging updates from the AIDA maintenance branch up to r3974
